--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Somewhere"
-  email            :
+  email            : ydh940416@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
