--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "YDH077's Intro"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Your Name"
@@ -95,9 +95,9 @@ analytics:
 author:
   name             : "Your Name"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            : ydh940416@gmail.com
+  bio              : "I am an **Amazing Hello World** Person."
+  location         : "South KR"
+  email            : "ydh940416@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
